Crash print previewing PDF and changing settings rapidly
Categories
(Core :: Printing: Setup, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox80 | --- | unaffected |
| firefox81 | --- | verified |
| firefox82 | --- | verified |
People
(Reporter: jwatt, Assigned: hiro)
References
(Regression)
Details
(Keywords: regression, Whiteboard: [print2020_v81])
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
Opening https://www.irs.gov/pub/irs-pdf/f1040.pdf in our new print preview UI and changing Landscape <-> Portrate rapidly crashes. Using macOS.
| Reporter | ||
Comment 1•5 years ago
|
||
Both current Nightly and Beta (post-uplifts) with print.tab_modal.enabled; haven't tested pref off.
Comment 2•5 years ago
|
||
Can definitely reproduce using keyboard navigation (rapidly toggling arrow keys). Sample crash report: https://crash-stats.mozilla.org/report/index/c70b53d8-f76a-44ed-a6dd-558350200903
| Assignee | ||
Comment 3•5 years ago
|
||
This is due to this change; https://hg.mozilla.org/integration/autoland/rev/dfddd9655dec
| Assignee | ||
Comment 4•5 years ago
|
||
Updated•5 years ago
|
| Assignee | ||
Comment 5•5 years ago
|
||
Though I pushed a fix, but I'd really like to write an automated test for this.
Updated•5 years ago
|
| Assignee | ||
Comment 7•5 years ago
|
||
Comment on attachment 9173895 [details]
Bug 1663053 - Bail out from HTMLCanvasElement::CallPrintCallback is mPrintState has already destroyed. r?jwatt
Beta/Release Uplift Approval Request
- User impact if declined: Crash
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: 1. Open https://www.irs.gov/pub/irs-pdf/f1040.pdf
- Ctrl+P to open the print preview window
- Change "Orientation" rapidly by using arrow keys
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): It's just a simple null check bailing out code to avoid the crash
- String changes made/needed: None
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
| Reporter | ||
Comment 8•5 years ago
|
||
Thanks a lot for jumping on this, Hiro!
Emilio, this fixes the crash and the original issue with blank PDF pages is also still fixed. I guess this falls under the "very small and well understood bracket" I was talking about. All the same, if we're to request this for b7 I wouldn't mind having your eyes/thoughts on this as an extra, after-the-fact check once you're around again.
Comment 10•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Comment 11•5 years ago
|
||
Set release status flags based on info from the regressing bug 1662426
Comment 12•5 years ago
|
||
Comment on attachment 9173895 [details]
Bug 1663053 - Bail out from HTMLCanvasElement::CallPrintCallback is mPrintState has already destroyed. r?jwatt
Approved for 81.0b7.
Comment 13•5 years ago
|
||
| bugherder uplift | ||
Comment 14•5 years ago
|
||
Reproduced this issue using Firefox 82.0a1 (BuildId:20200903151816).
This issue is verified fixed using Firefox 82.0a1 (BuildId:20200906215057) and Firefox 81.0b7 (BuildId:20200906164749) on Windows 10 64bit, macOS 10.14 and Ubuntu 18.04 64bit
Updated•5 years ago
|
Description
•