Bug 1663053 - Bail out from HTMLCanvasElement::CallPrintCallback is `mPrintState` has already destroyed. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D89264